--- a/public/screen.html
+++ b/public/screen.html
@@ -2,92 +2,225 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
-  <title>Écran vote</title>
+  <title>Starcup Live Vote — Écran</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@600;900&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;800;900&display=swap');
+
     :root{
-      --bg0:#05060a; --bg1:#0a1022;
-      --card:rgba(255,255,255,.06);
-      --border:rgba(255,255,255,.14);
-      --text:rgba(255,255,255,.95); --muted:rgba(255,255,255,.65);
-      --brand1:#ffb703; --brand2:#fb8500;
+      --pink:#FC1978;
+      --blue:#79EBFB;
+      --violet:#8D20C6;
+      --violetDark:#590D7D;
+      --dark:#210D41;
+      --cream:#FBD3AE;
+
+      --text: rgba(255,255,255,.95);
+      --muted: rgba(251,211,174,.82);
+
+      --border: rgba(121,235,251,.22);
+      --glass: rgba(33,13,65,.55);
+      --glass2: rgba(33,13,65,.35);
+      --shadow: 0 26px 80px rgba(0,0,0,.55);
     }
+
     *{box-sizing:border-box}
     body{
-      margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,Arial,sans-serif;
+      margin:0;
+      font-family: Raleway, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       color:var(--text);
-      background: radial-gradient(1100px 600px at 20% 0%, rgba(251,133,0,.18), transparent 55%),
-                  radial-gradient(900px 500px at 85% 10%, rgba(59,130,246,.16), transparent 55%),
-                  linear-gradient(180deg, var(--bg1), var(--bg0));
-      min-height:100vh;padding:32px;
+      background:
+        radial-gradient(900px 520px at 12% 0%, rgba(121,235,251,.18), transparent 60%),
+        radial-gradient(900px 520px at 88% 8%, rgba(252,25,120,.18), transparent 60%),
+        radial-gradient(1100px 700px at 50% 120%, rgba(141,32,198,.22), transparent 55%),
+        linear-gradient(180deg, var(--dark), #07050f);
+      min-height:100vh;
+      padding:32px;
     }
-    .top{display:flex;justify-content:space-between;gap:18px;align-items:flex-start;flex-wrap:wrap}
-    h1{margin:0;font-size:56px;font-weight:900;letter-spacing:.6px}
-    .room{margin-top:8px;color:var(--muted);font-size:18px;font-weight:800}
+
+    .top{
+      display:flex;
+      justify-content:space-between;
+      gap:18px;
+      align-items:flex-start;
+      flex-wrap:wrap
+    }
+
+    .brandTitle{
+      font-weight:900;
+      letter-spacing:1px;
+      color:var(--blue);
+      font-size:26px;
+      line-height:1.1;
+    }
+    .brandSub{
+      margin-top:8px;
+      color:var(--muted);
+      font-weight:800;
+      font-size:18px;
+    }
+
+    .room{
+      margin-top:10px;
+      color:rgba(255,255,255,.75);
+      font-size:16px;
+      font-weight:800
+    }
+
     .qrWrap{
-      display:flex;gap:16px;align-items:center;
-      background: linear-gradient(180deg, rgba(255,255,255,.09), rgba(255,255,255,.05));
+      display:flex;
+      gap:16px;
+      align-items:center;
+      background: linear-gradient(180deg, var(--glass), var(--glass2));
       border:1px solid var(--border);
-      border-radius:22px;padding:14px;
-      box-shadow:0 24px 60px rgba(0,0,0,.35);
+      border-radius:22px;
+      padding:14px;
+      box-shadow:var(--shadow);
       backdrop-filter:blur(10px);
     }
-    .qr{width:220px;height:220px;background:#fff;border-radius:18px;padding:10px}
-    .scan{font-size:20px;font-weight:900;margin-bottom:6px}
-    .url{font-size:16px;color:rgba(255,255,255,.82);word-break:break-all;max-width:520px}
-    .grid{display:grid;grid-template-columns:1fr 1fr;gap:22px;margin-top:30px}
+
+    .qr{
+      width:220px;
+      height:220px;
+      background:#fff;
+      border-radius:18px;
+      padding:10px;
+      border:1px solid rgba(121,235,251,.35)
+    }
+
+    .scan{
+      font-size:20px;
+      font-weight:900;
+      margin-bottom:6px;
+      color: rgba(255,255,255,.95);
+    }
+
+    .url{
+      font-size:16px;
+      color:rgba(251,211,174,.85);
+      word-break:break-all;
+      max-width:520px;
+      font-weight:700
+    }
+
+    .powered{
+      margin-top:18px;
+      color:rgba(251,211,174,.90);
+      font-weight:800;
+      letter-spacing:.3px;
+      font-size:18px;
+    }
+
+    .grid{
+      display:grid;
+      grid-template-columns:1fr 1fr;
+      gap:22px;
+      margin-top:18px;
+    }
+
     .card{
-      background: linear-gradient(180deg, rgba(255,255,255,.09), rgba(255,255,255,.05));
+      background: linear-gradient(180deg, var(--glass), var(--glass2));
       border:1px solid var(--border);
-      border-radius:22px;padding:22px;
-      box-shadow:0 26px 70px rgba(0,0,0,.35);
+      border-radius:22px;
+      padding:22px;
+      box-shadow:var(--shadow);
       backdrop-filter:blur(10px);
       min-height:190px;
       position:relative;
       outline: 0px solid transparent;
-      transition: outline .15s ease, transform .15s ease;
+      transition: outline .15s ease, transform .15s ease, box-shadow .15s ease;
     }
+
     .card.leader{
-      outline: 4px solid rgba(255,183,3,.55);
+      outline: 4px solid rgba(252,25,120,.65);
+      box-shadow: 0 0 0 1px rgba(252,25,120,.30), 0 18px 80px rgba(252,25,120,.18);
       transform: translateY(-2px);
     }
-    .title{font-size:34px;font-weight:900;line-height:1.05;margin:0 0 8px}
-    .artist{font-size:18px;color:var(--muted);font-weight:800;margin-bottom:16px}
-    .bar{height:14px;border-radius:999px;background:rgba(255,255,255,.10);border:1px solid rgba(255,255,255,.12);overflow:hidden}
-    .fill{height:100%;width:0%;background:linear-gradient(135deg,var(--brand1),var(--brand2));border-radius:999px;transition:width .25s ease}
-    .count{margin-top:10px;font-size:16px;color:rgba(255,255,255,.86);font-weight:900}
-    .winner{
-      margin-top:22px;display:inline-block;padding:16px 22px;border-radius:999px;
-      background:linear-gradient(135deg,var(--brand1),var(--brand2));color:#0a0a0a;
-      font-size:34px;font-weight:900;box-shadow:0 26px 70px rgba(251,133,0,.28);
+
+    .title{
+      font-size:34px;
+      font-weight:900;
+      line-height:1.05;
+      margin:0 0 8px
     }
-    .muted{margin-top:16px;color:var(--muted);font-size:18px;font-weight:800}
+
+    .artist{
+      font-size:18px;
+      color:var(--muted);
+      font-weight:800;
+      margin-bottom:16px
+    }
+
+    .bar{
+      height:14px;
+      border-radius:999px;
+      background:rgba(255,255,255,.10);
+      border:1px solid rgba(121,235,251,.18);
+      overflow:hidden;
+    }
+
+    .fill{
+      height:100%;
+      width:0%;
+      background: linear-gradient(90deg, var(--blue), var(--pink));
+      border-radius:999px;
+      transition:width .25s ease;
+    }
+
+    .count{
+      margin-top:10px;
+      font-size:16px;
+      color:rgba(255,255,255,.88);
+      font-weight:900
+    }
+
+    .winnerPill{
+      margin-top:20px;
+      display:inline-block;
+      padding:14px 20px;
+      border-radius:999px;
+      background: linear-gradient(90deg, var(--blue), var(--pink));
+      color:#12081f;
+      font-size:30px;
+      font-weight:900;
+      box-shadow: 0 26px 80px rgba(121,235,251,.16);
+    }
+
+    .muted{
+      margin-top:16px;
+      color:var(--muted);
+      font-size:18px;
+      font-weight:800;
+    }
+
     .bigEmpty{
-      margin-top:30px;
+      margin-top:18px;
       padding: 22px;
       border-radius: 22px;
-      border: 1px solid var(--border);
+      border: 1px solid rgba(121,235,251,.18);
       background: rgba(0,0,0,.20);
-      color: var(--muted);
+      color: rgba(251,211,174,.85);
       font-size: 26px;
       font-weight: 900;
       text-align: center;
     }
+
     @media(max-width:1050px){
-      h1{font-size:44px}
       .grid{grid-template-columns:1fr}
       .qr{width:200px;height:200px}
       .title{font-size:30px}
+      .brandSub{font-size:16px}
     }
   </style>
 </head>
 <body>
   <div class="top">
     <div>
-      <h1>Vote du public</h1>
+      <div class="brandTitle">STARCUP LIVE VOTE</div>
+      <div class="brandSub">L’animation interactive en temps réel</div>
       <div class="room" id="room"></div>
     </div>
+
     <div class="qrWrap">
       <img class="qr" id="qr" alt="QR code" />
       <div>
@@ -97,8 +230,8 @@
     </div>
   </div>
 
-  <div id="main"></div>
   <div id="winnerWrap"></div>
+  <div id="main"></div>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
@@ -124,23 +257,23 @@
     socket.emit("join", { roomCode });
 
     socket.on("round_update", (state) => {
-      // Winner
+      // Dernier gagnant validé
       winnerWrap.innerHTML = "";
       if (state.lastWinner) {
         const w = document.createElement("div");
-        w.className = "winner";
-        w.textContent = `🏆 Dernier gagnant : ${state.lastWinner.title} — ${state.lastWinner.artist}`;
+        w.className = "winnerPill";
+        w.textContent = `🏆 Gagnant validé : ${state.lastWinner.title} — ${state.lastWinner.artist}`;
         winnerWrap.appendChild(w);
       } else {
         const m = document.createElement("div");
         m.className = "muted";
-        m.textContent = "Pas encore de gagnant validé.";
+        m.textContent = "Aucun gagnant validé pour l’instant.";
         winnerWrap.appendChild(m);
       }
 
-      // Vote ouvert / fermé
+      // Vote fermé
       if (!state.voteOpen) {
-        main.innerHTML = `<div class="bigEmpty">Aucun vote en cours…</div>`;
+        main.innerHTML = `<div class="bigEmpty">Aucun vote en cours…<div style="margin-top:10px;font-size:18px;font-weight:800;color:rgba(251,211,174,.85)">Scannez le QR pour rejoindre la session</div></div>`;
         return;
       }
 
@@ -148,13 +281,17 @@
       const counts = suggestions.map(t => state.votes[t.id] || 0);
       const max = Math.max(1, ...counts);
 
-      // leader = celui qui a le max
+      // leader
       let leaderId = null;
       let best = -1;
       for (const t of suggestions) {
         const c = state.votes[t.id] || 0;
         if (c > best) { best = c; leaderId = t.id; }
       }
+
+      const powered = document.createElement("div");
+      powered.className = "powered";
+      powered.textContent = "Vote en direct • propulsé par Starcup";
 
       const grid = document.createElement("div");
       grid.className = "grid";
@@ -175,11 +312,8 @@
       }
 
       main.innerHTML = "";
+      main.appendChild(powered);
       main.appendChild(grid);
-    });
-
-    socket.on("validated", ({ winner }) => {
-      // Rien de spécial ici: le round_update qui suit gère l’affichage.
     });
 
     function escapeHtml(s){
